<resources>
    <string name="app_name">Check weather</string>
    <string name="city">City</string>
    <string name="country_code">Country code</string>
    <string name="sunny">Sunny</string>
    <string name="_20_xb0_c">20 °C</string>
    <string name="today">Today</string>
    <string name="humidity_10">Humidity: 10%</string>
    <string name="night_20_xb0_c">Night: 20 °C</string>
    <string name="morning_20_xb0_c">Morning: 20 °C</string>
    <string name="pressure_10_hpa">Pressure: 10 hPa</string>
    <string name="current_location">Current location</string>
    <string name="check_weather">Check weather</string>
    <string name="easy_way_to_check_your_weather_whenever_you_want">Easy way to check your weather whenever you want.</string>
    <string name="my_locations">My Locations</string>
    <string name="your_places">Your places</string>
    <string name="type_a_place">Type a place...</string>
    <string name="plus">+</string>
    <string name="city3">City</string>
    <string name="country_code3">Country code</string>
    <string name="today3">Today</string>
    <string name="weather_description">Weather: description</string>
    <string name="morn_xb0_c">Morn: ? °C</string>
    <string name="day_xb0_c">Day: ? °C</string>
    <string name="night_xb0_c">Night: ? °C</string>
    <string name="tommorow">Tommorow</string>
    <string name="weather_description3">Weather: description</string>
    <string name="day_xb0_c3">Day: ? °C</string>
    <string name="morn_xb0_c3">Morn: ? °C</string>
    <string name="night_xb0_c3">Night: ? °C</string>
    <string name="day_3">Day 3</string>
    <string name="weather_description33">Weather: description</string>
    <string name="morn_xb0_c33">Morn: ? °C</string>
    <string name="day_xb0_c33">Day: ? °C</string>
    <string name="night_xb0_c33">Night: ? °C</string>
    <string name="day_4">Day 4</string>
    <string name="weather_description34">Weather: description</string>
    <string name="morn_xb0_c34">Morn: ? °C</string>
    <string name="day_xb0_c35">Day: ? °C</string>
    <string name="night_xb0_c36">Night: ? °C</string>
    <string name="day_5">Day 5</string>
    <string name="weather_description35">Weather: description</string>
    <string name="morn_xb0_c35">Morn: ? °C</string>
    <string name="day_xb0_c355">Day: ? °C</string>
    <string name="night_xb0_c35">Night: ? °C</string>
    <string name="day_6">Day 6</string>
    <string name="weather_description36">Weather: description</string>
    <string name="morn_xb0_c36">Morn: ? °C</string>
    <string name="day_xb0_c36">Day: ? °C</string>
    <string name="night_xb0_c366">Night: ? °C</string>
    <string name="day_7">Day 7</string>
    <string name="weather_description37">Weather: description</string>
    <string name="morn_xb0_c37">Morn: ? °C</string>
    <string name="day_xb0_c37">Day: ? °C</string>
    <string name="night_xb0_c37">Night: ? °C</string>
    <string name="loading_data">LOADING DATA</string>
</resources>
