<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentLayout"
    android:background="#3c3c3c">

    <ScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#6e000000">

        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:id="@+id/scrollLayout"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/topBarLayout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city"
                        android:id="@+id/cityId"
                        android:textColor="#ffffff"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:padding="8dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/country_code"
                        android:id="@+id/countryCodeId"
                        android:textColor="#ffffff"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:padding="8dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:id="@+id/halfLayout"
                    android:weightSum="2.0"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/topBarLayout">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:id="@+id/halfOneLayout"
                    android:padding="5dp">

                    <TextView
                        android:text="@string/sunny"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:textColor="#ffffff"
                        android:textSize="42sp"
                        android:id="@+id/weatherScroll" />

                    <TextView
                        android:text="@string/_20_xb0_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:textSize="90sp"
                        android:textStyle="bold"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/dayScroll"
                        android:id="@+id/tempDayScroll"
                        android:layout_above="@+id/weatherScroll"
                        android:gravity="center_vertical"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />

                    <TextView
                        android:text="@string/today"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:textSize="42sp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:id="@+id/dayScroll" />
                </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1.0"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:id="@+id/halfTwoLayout"
                        android:padding="5dp">

                        <TextView
                            android:text="@string/humidity_10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#ffffff"
                            android:textSize="24sp"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            android:id="@+id/humidityScroll" />

                        <TextView
                            android:text="@string/night_20_xb0_c"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#ffffff"
                            android:textSize="24sp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:id="@+id/nightScroll"
                            android:layout_below="@+id/morningScroll" />

                        <TextView
                            android:text="@string/morning_20_xb0_c"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#ffffff"
                            android:textSize="24sp"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:id="@+id/morningScroll" />

                        <TextView
                            android:text="@string/pressure_10_hpa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#ffffff"
                            android:textSize="24sp"
                            android:id="@+id/pressureScroll"
                            android:layout_above="@+id/humidityScroll"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true" />
                    </RelativeLayout>

                </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>