<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ideo2.checkweather.MainActivity"
    android:background="@drawable/background">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My Locations"
        android:id="@+id/startMyLocations"
        android:background="@drawable/layout_rounded_db"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_alignParentBottom="true"
        android:padding="15dp"
        android:clickable="false"
        android:onClick="goToMyLocations"
        android:contextClickable="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/logoId"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_weather"
        android:id="@+id/textView"
        android:layout_below="@+id/logoId"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/easy_way_to_check_your_weather_whenever_you_want"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:gravity="center"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_location"
        android:id="@+id/startCurrentLocation"
        android:background="@drawable/layout_rounded_g"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="24sp"
        android:padding="15dp"
        android:layout_above="@+id/startMyLocations"
        android:layout_marginBottom="10dp"
        android:clickable="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="goByCurrentLocation" />

</RelativeLayout>
