<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ideo2.checkweather.ListActivity"
    android:background="@drawable/background2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_places"
        android:id="@+id/textView2"
        android:textSize="32sp"
        android:textColor="#ffffff"
        android:layout_marginBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_alignRight="@+id/listView"
        android:layout_alignEnd="@+id/listView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_above="@+id/editUserPlace"
        android:background="@drawable/layout_rounded_gradient3"
        android:layout_marginBottom="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editUserPlace"
        android:textSize="24sp"
        android:hint="@string/type_a_place"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textColorLink="#ffffff"
        android:textColorHighlight="#ffffff"
        android:background="@drawable/layout_rounded_g"
        android:layout_alignBottom="@+id/addButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/addButton"
        android:layout_toLeftOf="@+id/addButton"
        android:layout_toStartOf="@+id/addButton"
        android:layout_marginRight="10dp"
        android:textStyle="italic"
        android:paddingLeft="8dp"
        android:textCursorDrawable="@drawable/black_cursor"
        android:fontFamily="sans-serif-condensed" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:id="@+id/addButton"
        android:background="@drawable/layout_rounded_db"
        android:textColor="#ffffff"
        android:textSize="40sp"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="4dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/listView"
        android:layout_alignEnd="@+id/listView" />
</RelativeLayout>
